tests/invalid/undefined_variable_in_observed_expression.esm
{
  "esm": "0.8.0",
  "metadata": {
    "name": "UndefinedVariableInObservedExpression",
    "description": "Invalid: an undefined variable inside an OBSERVED variable's `expression`. Observed expressions escaped reference-integrity checking in EVERY binding: the walkers descended `equations` only, so an undefined name here was invisible. Reference integrity must apply to EVERY expression-bearing field, not just `equations` (esm-spec \u00a74.9.5). `y` and `k` are declared; the ONLY defect is the undefined name `undefined_xyz`. The file is schema-valid, so it reaches structural validation (CONFORMANCE_SPEC \u00a77.1.2). Expected error: undefined_variable @ /models/TestModel/variables/z/expression.",
    "authors": [
      "EarthSciML"
    ],
    "created": "2026-07-14T00:00:00Z"
  },
  "models": {
    "TestModel": {
      "variables": {
        "y": {
          "type": "state",
          "units": "1",
          "description": "State."
        },
        "k": {
          "type": "parameter",
          "units": "1/s",
          "default": 1.0,
          "description": "Declared parameter."
        },
        "z": {
          "type": "observed",
          "units": "1/s",
          "description": "Observed variable whose expression names `undefined_xyz`.",
          "expression": {
            "op": "*",
            "args": [
              "k",
              "undefined_xyz"
            ]
          }
        }
      },
      "equations": [
        {
          "lhs": {
            "op": "D",
            "args": [
              "y"
            ],
            "wrt": "t"
          },
          "rhs": {
            "op": "*",
            "args": [
              {
                "op": "-",
                "args": [
                  "k"
                ]
              },
              "y"
            ]
          }
        }
      ]
    }
  }
}
